# codex-cron

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: verify.yml
.planning/: codex-cron-event-loop.sdd-plan.v1.json  codex-cron.ao2-run.yaml  codex-cron.sdd-plan.v1.json
crates/codex-cron-cli/: Cargo.toml
crates/codex-cron-cli/src/: cli.rs  clock.rs  config.rs  daemon.rs  delivery.rs  event_loop.rs  executor.rs  id.rs  lib.rs  main.rs  paths.rs  store.rs
crates/codex-cron-cli/tests/: cli_lifecycle.rs
crates/codex-cron-core/: Cargo.toml
crates/codex-cron-core/src/: event_loop.rs  job.rs  lib.rs  scan.rs  schedule.rs  tick.rs
docs/examples/: ao2-pulse-event-loop.md
docs/superpowers/plans/: 2026-06-12-codex-cron-event-loop.md
docs/superpowers/specs/: 2026-05-29-codex-cron-design.md
scripts/: check-license-policy.sh
