[package]
name = "codex-cron-core"
description = "Pure scheduling logic for codex-cron: schedule grammar, job model, and the durable tick engine."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
croner.workspace = true
thiserror.workspace = true
